--- a/bibliography.bib
+++ b/bibliography.bib
@@ -44,7 +44,6 @@
   isbn      = {978-1-4503-5519-3},
   publisher = {Association for Computing Machinery},
   address   = {New York, NY, USA},
-  url       = {https://doi.org/10.1145/3141871.3141873},
   doi       = {10.1145/3141871.3141873},
   abstract  = {Although the performance of today's JavaScript engines is sufficient for most web applications, faster and more predictable runtimes could be desired for performance-critical web code. Therefore, we present Speedy.js, a cross-compiler that translates JavaScript/TypeScript to WebAssembly, a new standard for native execution supported by all major browsers. Speedy.js only imposes minimal restrictions on the JavaScript code, namely that the performance-critical functions are wrapped in TypeScript and only engage a performance-optimal subset of the JavaScript language. With this approach, we manage to make compute-intense web code up to four times faster, while reducing runtime fluctuations to the half.},
   booktitle = {Proceedings of the 9th ACM SIGPLAN International Workshop on Virtual Machines and Intermediate Languages},
@@ -158,6 +157,43 @@
   year      = {2010},
   editor    = {Seung Hyuk Baik},
   chapter   = {3},
-  doi       = {10.5772/6895},
-  url       = {https://doi.org/10.5772/6895}
+  doi       = {10.5772/6895}
+}
+
+@techreport{RFC6455,
+  author       = {I. Fette and A. Melnikov},
+  title        = {The WebSocket Protocol},
+  howpublished = {Internet Requests for Comments},
+  type         = {RFC},
+  number       = {6455},
+  year         = {2011},
+  month        = {December},
+  issn         = {2070-1721},
+  publisher    = {RFC Editor},
+  institution  = {RFC Editor},
+  url          = {http://www.rfc-editor.org/rfc/rfc6455.txt}
+}
+
+@techreport{RFC8835,
+  author       = {H. Alvestrand},
+  title        = {Transports for WebRTC},
+  howpublished = {Internet Requests for Comments},
+  type         = {RFC},
+  number       = {8835},
+  year         = {2021},
+  month        = {January},
+  issn         = {2070-1721},
+  publisher    = {RFC Editor},
+  institution  = {RFC Editor},
+  url          = {http://www.rfc-editor.org/rfc/rfc8835.txt}
+}
+
+@report{wasm_specification,
+  title = {{WebAssembly Core Specification}},
+  version = {2.0},
+  editor = {Rossberg, Andreas},
+  date = {2022-04-19},
+  institution = {{W3C}},
+  url = {https://www.w3.org/TR/wasm-core-2/},
+  langid = {english}
 }
